<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/action_sign_out" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/about" />
    </group>


</menu>
