<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="50"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="200"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
